# strem

./: Cargo.toml  LICENSE  README.md  azure-pipelines.yml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
docs/: mkdocs.yml
docs/src/: index.md
docs/src/about/: contact.md  contributors.md  publications.md
docs/src/reference/: schema.md  spre.md
docs/src/started/: example.md  features.md  index.md
examples/data/: detections.json  offset-detections.json
src/: compiler.rs  config.rs  controller.rs  datastream.rs  lib.rs  matcher.rs  monitor.rs  symbolizer.rs
src/compiler/: ir.rs  lexer.rs  listener.rs  parser.rs
src/compiler/analyzer/: semantic.rs
src/compiler/ir/: ast.rs
src/compiler/lexer/: stream.rs  token.rs
src/datastream/: exporter.rs  frame.rs  importer.rs
src/matcher/: automata.rs  offline.rs  online.rs
src/monitor/: s4.rs  s4u.rs
src/symbolizer/: ast.rs
strem/: Cargo.toml  LICENSE  README.md
strem-ds/: Cargo.toml
strem-ds/src/: dataset.rs  main.rs
strem/benches/: benchmarks.rs
strem/benches/data/queries/: q02.spre  q03.spre  q04.spre  q05.spre
strem/examples/: queryA.spre
strem/src/: compiler.rs  config.rs  controller.rs  datastream.rs  matcher.rs  monitor.rs  symbolizer.rs
strem/src/compiler/: analyzer.rs  lexer.rs  listener.rs  parser.rs
strem/src/compiler/analyzer/: semantic.rs
strem/src/compiler/ir/: ast.rs
strem/src/datastream/: frame.rs  reader.rs
strem/src/datastream/reader/: detection.rs
strem/src/datastream/reader/detection/: annotation.rs  category.rs  image.rs
strem/src/matcher/: automata.rs  regex.rs
strem/src/matcher/automata/: dfa.rs
strem/src/monitor/: s4.rs  s4u.rs
strem/tests/: integration.rs
strem/tests/common/: mod.rs
(+17 files in other folders)
