[package]
name = "strem"
version = "0.1.0"
authors = ["Jacob Anderson <andersonjwan@gmail.com>"]
edition = "2021"
description = "A tool for spatial and temporal regular expression matching"
repository = "https://github.com/andersonjwan/st-regex"
license = "MIT"
keywords = ["regex", "pattern-matching", "spatial", "temporal", "perception"]

[dependencies]
clap = { version = "3.2.16", features = ["cargo"] }
csv = "1.1.6"
itertools = "0.10.3"
nalgebra = "0.31.2"
regex-automata = "0.2.0"
serde = { version = "1.0.144", features = ["derive"] }
json5 = "0.4.1"
serde_json = "1.0.87"
chrono = "0.4.23"
image = "0.24.5"
imageproc = "0.23.0"
linked_hash_set = "0.1.4"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
